--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site wide configuration
 
-title: "My Site"
-description: "This is a description of my awesome site."
+title: "Heather Soyka"
+description: "This is a description of my site."
 logo: # 120x120 px default image used for Twitter summary card
 teaser: # 400x250 px default teaser image used in image archive grid
 locale: en
@@ -25,8 +25,8 @@ gems:
 
 
 # Site owner
-owner:
-  name:
+owner: 
+  name: Heather Soyka
   email:
   twitter:
   google:
